fix: order ditail deletBtn visibility

--- a/client/src/app/orders/orders.scss
+++ b/client/src/app/orders/orders.scss
@@ -136,6 +136,10 @@
       &:hover {
         background: #28a745;
       }
+
+      &-hide{
+        display: none;
+      }
     }
   }
 
