--- a/client/src/app/page.scss
+++ b/client/src/app/page.scss
@@ -100,3 +100,7 @@
   background-color: rgb(241, 245, 248);
   overflow-y: auto;
 }
+
+.loading-spinner{
+  background: red;
+}
